fix link spacing

--- a/src/NoaaWeb.App/src/style.css
+++ b/src/NoaaWeb.App/src/style.css
@@ -40,3 +40,7 @@ img.preview {
     border-color: #95999c;
     color: #343a40;
 }
+
+td.links a {
+    margin: 0 3px;
+}
